# prototype-0

./: .gitignore  CMakeLists.txt  Cargo.toml  README.md  compile_commands.json  init_compile_commands.bat  init_compile_commands.ps1  init_compile_commands.sh  test.sh  usage.sh  web-dev.sh
client/: Cargo.toml
client/src/: context.rs  main.rs  run.rs
core/: Cargo.toml
core/assets/: shader.wgsl  shader_sample.wgsl  shader_sky.wgsl  shader_ui.wgsl  shader_world.wgsl  skybox.wgsl
core/src/: chunk_cache.rs  context.rs  lib.rs  player.rs  terrain_manager.rs  terrain_worker.rs  texture.rs  vertex.rs  vox.rs  vox_graphics_wrapper.rs  vox_update.rs
core/src/graphics/: frustum.rs  mod.rs  sky_renderer.rs  ui_renderer.rs  vox_graphics_wrapper.rs  world_renderer.rs
exe/: Cargo.toml
exe/src/: main.rs
external_headers/: t.h
game_core/: Cargo.toml
game_core/assets/: shader_sky.wgsl  shader_world.wgsl
game_core/src/: lib.rs  terrain_manager.rs
game_core/src/graphics/: font_info.rs  vox_graphics_wrapper.rs
include/t/: std.os.thread.h
lib/: Cargo.toml
lib/c/: .gitignore
lib/c/TMap/include/: TMap.h
lib/c/TMap/src/: TMap.c  internal.h
lib/c/mod/: print_compile_commands.bat  print_compile_commands.sh
lib/c/mod/include/: mod.h  mod_types.h
lib/c/mod/src/: mod.c
lib/c/std.os.thread/: CMakeLists.txt
lib/c/std.os.thread/include/t/: std.os.thread.h
lib/c/std.os.thread/src/: conditionVariable.c  internal.h  mutex.c  thread.c
lib/c/vox_event_loop/: CMakeLists.txt  print_compile_commands.bat  print_compile_commands.sh  test.sh
lib/c/vox_event_loop/include/: vox_event_loop.h
lib/c/vox_event_loop/include/vox/: event_loop.h
lib/c/vox_event_loop/include/vox/event_loop/: core.h
lib/c/vox_event_loop/include/vox/event_loop/async_tasks/: file.h
lib/c/vox_event_loop/src/: core.c  file.c  internal.h  main.c
lib/c/vox_event_loop/test/: main.c
lib/rust/bmp/src/: lib.rs
lib/rust/library_wrapper/: Cargo.toml  build.rs
lib/rust/mod_loader/: Cargo.toml  build.rs  init.sh
lib/rust/mod_loader/src/: lib.rs  mod_bindings.rs
lib/rust/tmap_wrapper/: Cargo.toml  build.rs  init.sh
lib/rust/tmap_wrapper/src/: lib.rs  tmap_bindings.rs
lib/src/: input.rs  lib.rs  lru_cache.rs  map.rs  shader.wgsl  shader_fog.wgsl  shader_rgba8.wgsl  texture.rs  vertex.rs  vox.rs  vox_update.rs
lib/zig/: .gitignore
lib/zig/block_registry/: build.zig
lib/zig/block_registry/src/: root.zig  types.zig
main/: Cargo.toml
main/src/: context.rs  input.rs  lib.rs  main.rs  shader_fog.wgsl  surface_wrapper.rs  vox_update.rs  wgpu_context.rs
map_core/: Cargo.toml
map_core/src/: lib.rs
map_types/: Cargo.toml
map_types/src/: lib.rs
messages/: Cargo.toml
messages/src/: lib.rs
messages/tests/: partial_stream.rs
mods/: .gitignore  README.md
mods/builtin/store/: build.zig
mods/builtin/store/src/: root.zig
module_loader/: Cargo.toml  build.rs
module_loader/src/: lib.rs
noise/: Cargo.toml
noise/src/: lib.rs
noise_test/: Cargo.toml
noise_test/src/: main.rs
server/: Cargo.toml
server/src/: main.rs
src/: conditionVariable.c  internal.h  main.rs  mutex.c  plugin.c  thread.c
terrain_worker_native/: Cargo.toml
terrain_worker_native/src/: lib.rs
terrain_worker_web/: Cargo.toml
terrain_worker_web/src/: lib.rs
test/: cross_platform_sleep.h  cross_platform_time.h  main.c
util_lru_cache/: Cargo.toml
util_lru_cache/src/: lib.rs
util_lru_cache_arc/: Cargo.toml
util_lru_cache_arc/src/: lib.rs
util_lru_cache_rc/: Cargo.toml
util_lru_cache_rc/src/: lib.rs
wasm_terrain_worker_main/: Cargo.toml
wasm_terrain_worker_main/src/: lib.rs
wasm_terrain_worker_sub/: Cargo.toml
wasm_terrain_worker_sub/src/: lib.rs
web/: index.html  package.json  vite.config.ts
web/src/: App.tsx  index.tsx  style.css
web_terrain_worker_main/: index.html  package.json  tsconfig.json  vite.config.ts
web_terrain_worker_main/src/: worker.ts
web_terrain_worker_sub/: package.json  vite.config.ts
web_terrain_worker_sub/src/: worker.ts
