[workspace]
resolver = "2"
members = [
    "core",
    "exe",
    "main",
    "map_core",
    "map_types",
    "noise",
    "noise_test",
    "terrain_worker_native",
    "terrain_worker_web",
    "util_lru_cache_arc",
    "util_lru_cache_rc",
    "wasm_terrain_worker_main",
    "wasm_terrain_worker_sub",
]
