[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
bincode = "1.3"
env_logger = "0.11.5"
log = "0.4.22"
wgpu = "22.0"
winit = { version = "0.29.10", features = ["rwh_05"] }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1.43.0", features = ["full"] }
gltf = "1.0"
bytemuck = { version = "1.13", features = ["derive"] }
messages = { version = "0.1.0", path = "../messages" }
game_core = { version = "0.1.0", path = "../game_core" }
