[package]
name = "core"
version = "0.1.0"
edition = "2021"

[dependencies]
bytemuck = { version = "1.14.3", features = ["derive"] }
map-core = { version = "0.1.0", path = "../map_core" }
map-types = { version = "0.1.0", path = "../map_types" }
glam = "0.25.0"
wgpu = "22.0"
image = "0.25.2"
num_cpus = "1.16.0"
tokio = { version = "1.43.0", features = ["full"] }
messages = { version = "0.1.0", path = "../messages" }
bincode = "1.3.3"
serde = "1.0.217"
