[package]
name = "ft-vox-prototype-0-lib"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bytemuck = { version = "1.14.3", features = ["derive"] }
cfg-if = "1.0.0"
env_logger = "0.11.5"
ft-vox-prototype-0-noise = { version = "0.1.0", path = "../noise" }
glam = "0.25.0"
log = "0.4.22"
wgpu = "22.0"
winit = { version = "0.29.10", features = ["rwh_05"] }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser"] }

[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = "0.24.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
console_log = "1.0"
wgpu = { version = "22.0", features = ["webgl"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.30"
web-sys = { version = "0.3", features = ["Document", "Window", "Element"] }
