[package]
name = "ft-vox-prototype-0-main"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
env_logger = "0.11.5"
log = "0.4.22"
wgpu = "22.0"
winit = { version = "0.29.10", features = ["rwh_05"] }
ft-vox-prototype-0-core = { version = "0.1.0", path = "../core" }
