[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.43.0", features = ["full"] }
messages = { version = "0.1.0", path = "../messages" }
bincode = "1.3.3"
serde = "1.0.217"
map-types = { version = "0.1.0", path = "../map_types" }
map-core = { version = "0.1.0", path = "../map_core" }
