[package]
name = "ft-vox-prototype-0-terrain-worker-native"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["rlib"]

[dependencies]
ft-vox-prototype-0-core = { version = "0.1.0", path = "../core" }
ft-vox-prototype-0-map-types = { version = "0.1.0", path = "../map_types" }
ft-vox-prototype-0-map-core = { version = "0.1.0", path = "../map_core" }
num_cpus = "1.16.0"
