[package]
name = "ft-vox-prototype-0-wasm-terrain-worker-sub"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
ft-vox-prototype-0-core = { version = "0.1.0", path = "../core" }
ft-vox-prototype-0-map-types = { version = "0.1.0", path = "../map_types" }
ft-vox-prototype-0-map-core = { version = "0.1.0", path = "../map_core" }
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
    "Window",
    "console",
    "DedicatedWorkerGlobalScope",
    "MessageEvent",
    "WorkerNavigator",
    "StorageManager",
    "FileSystemDirectoryHandle",
    "FileSystemFileHandle",
    "FileSystemGetFileOptions",
    "FileSystemSyncAccessHandle",
] }
js-sys = "0.3"
wasm-bindgen-futures = "0.4.45"
futures = "0.3.31"
